--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "@reduxjs/toolkit": "^1.5.0",
+    "appcenter": "4.0.2",
+    "appcenter-analytics": "4.0.2",
+    "appcenter-crashes": "4.0.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-code-push": "^7.0.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
