--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.6",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
@@ -22,9 +25,14 @@
     "react-native": "0.63.4",
     "react-native-code-push": "^7.0.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^9.2.0",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
+    "react-native-size-matters": "^0.4.0",
     "react-native-vector-icons": "^8.0.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
